--- a/gallery.html
+++ b/gallery.html
@@ -78,6 +78,7 @@
 
         <div class="col-sm-4">
             <h4 class="inline-block">What are you waiting for?</h4>
+             <a target="_blank" href="mailto: fernix65@yahoo.com">email Rossini</a>
         </div>
 
         <div class="col-sm-4">
@@ -106,7 +107,7 @@
 
         <div class="col-sm-4">
             <h4 class="inline-block">website created by iC Automation</h4>
-            <p>gd.icautomation@gmail.com</p>
+            <a target="_blank" href="mailto: gd.icautomation@gmail.com">email iC Automation</a>
         </div>   
     </div>
 </footer>
