--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                         <li>Tel: 01545561029</li><br>
                         <li>Email: fernix65@yahoo.com</li>
                         </ul>
-
+                    <a target="_blank" href="mailto: fernix65@yahoo.com">email Rossini</a>
                     </div>
                 </div>
                 <div class="col-12 d-md-none d-lg-block col-lg-4">
@@ -365,6 +365,7 @@
 
         <div class="col-sm-4">
             <h4 class="inline-block">What are you waiting for?</h4>
+             <a target="_blank" href="mailto: fernix65@yahoo.com">email Rossini</a>
         </div>
 
         <div class="col-sm-4">
@@ -393,7 +394,7 @@
 
         <div class="col-sm-4">
             <h4 class="inline-block">website created by iC Automation</h4>
-            <p>gd.icautomation@gmail.com</p>
+            <a target="_blank" href="mailto: gd.icautomation@gmail.com">email iC Automation</a>
         </div>   
     </div>
 </footer>
