--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -49,22 +49,22 @@
 
  <section id="photo">
           
-       <img src="assets/images/fish.jpg">
-       <img src="assets/images/beach.jpg">
-       <img src="assets/images/beach1.jpg">
-       <img src="assets/images/beach2.jpg">
-       <img src="assets/images/beach3.jpg">
-       <img src="assets/images/beach4.jpg">
-       <img src="assets/images/beach5.jpg">
-       <img src="assets/images/beach6.jpg">
-       <img src="assets/images/fishing.jpg">
-       <img src="assets/images/food1.jpg">
-       <img src="assets/images/food2.jpg">
-       <img src="assets/images/food3.jpg">
-       <img src="assets/images/food4.jpg">
-       <img src="assets/images/food5.jpg">
-       <img src="assets/images/food6.jpg">
-       <img src="assets/images/food7.jpg">
+       <img src="assets/images/fish.jpg" alt="fish dish">
+       <img src="assets/images/beach.jpg" alt="beach">
+       <img src="assets/images/beach1.jpg" alt="beach 1">
+       <img src="assets/images/beach2.jpg" alt="beach 2">
+       <img src="assets/images/beach3.jpg" alt="beach 3">
+       <img src="assets/images/beach4.jpg" alt="beach 4">
+       <img src="assets/images/beach5.jpg" alt="beach 5">
+       <img src="assets/images/beach6.jpg" alt="beach 6">
+       <img src="assets/images/fishing.jpg" alt="fishing">
+       <img src="assets/images/food1.jpg" alt="food 1">
+       <img src="assets/images/food2.jpg" alt="food 2">
+       <img src="assets/images/food3.jpg" alt="food 3">
+       <img src="assets/images/food4.jpg" alt="food 4">
+       <img src="assets/images/food5.jpg" alt="food 5">
+       <img src="assets/images/food6.jpg" alt="food 6">
+       <img src="assets/images/food7.jpg" alt="food 7">
 </section>
 
 
@@ -78,7 +78,7 @@
 
         <div class="col-sm-4">
             <h4 class="inline-block">What are you waiting for?</h4>
-             <a target="_blank" href="mailto: fernix65@yahoo.com">email Rossini</a>
+             <a target="_blank" href="mailto:fernix65@yahoo.com">email Rossini</a>
         </div>
 
         <div class="col-sm-4">
@@ -107,7 +107,7 @@
 
         <div class="col-sm-4">
             <h4 class="inline-block">website created by iC Automation</h4>
-            <a target="_blank" href="mailto: gd.icautomation@gmail.com">email iC Automation</a>
+            <a target="_blank" href="mailto:gd.icautomation@gmail.com">email iC Automation</a>
         </div>   
     </div>
 </footer>
